// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList Container should render Cancel 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SubscriptionList Container should render CancelWithInvoiceList 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SubscriptionList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-1lcio32-SubscriptionListWrapper e12e7g630"
  >
    <div
      class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
    >
      <img
        alt="DSC07717"
        class="css-cibo30-ImageWrapper e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <div
        class="css-6l2m0q-SubscriptionListItemContent eere75z3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
        >
          Foobar Memberplan
        </h6>
        <ul
          class="css-14qrd03-SubscriptionListItemMeta eere75z2"
        >
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
              />
            </svg>
            <span>
              Abgeschlossen am 
              <time
                datetime="2023-01-01"
              >
                01.01.2023 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
              />
            </svg>
            <span>
              Bezahlt bis 
              <time
                datetime="2032-01-01"
              >
                01.01.2032 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8A5.87 5.87 0 0 1 6 12c0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"
              />
            </svg>
             Wird automatisch vierteljährlich erneuert
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
            </svg>
             Kostet CHF 2'500.- pro Monat
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
             
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
              href="https://example.com"
            >
              Details & Zahlungen
            </a>
          </li>
        </ul>
        <div
          class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-10v00ka-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Abo Künden
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1jff9ki-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Jetzt Bezahlen
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`SubscriptionList Container should render Extend 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SubscriptionList Container should render Pay 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,171 @@
  <DocumentFragment>
    <article
      class="css-1lcio32-SubscriptionListWrapper e12e7g630"
    >
      <div
+       class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1f6gfio-MuiPaper-root-MuiAlert-root"
+       role="alert"
+     >
+       <div
+         class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
+       >
+         <svg
+           aria-hidden="true"
+           class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
+           data-testid="ErrorOutlineIcon"
+           focusable="false"
+           viewBox="0 0 24 24"
+         >
+           <path
+             d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
+           />
+         </svg>
+       </div>
+       <div
+         class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
+       >
+         No more mocked responses for the query: query Subscriptions {
+   subscriptions {
+     ...FullSubscription
+     __typename
+   }
+ }
+
+ fragment FullSubscription on Subscription {
+   id
+   url
+   paymentPeriodicity
+   monthlyAmount
+   autoRenew
+   startsAt
+   extendable
+   paidUntil
+   paymentMethod {
+     ...FullPaymentMethod
+     __typename
+   }
+   deactivation {
+     ...FullSubscriptionDeactivation
+     __typename
+   }
+   memberPlan {
+     ...FullMemberPlan
+     __typename
+   }
+   properties {
+     ...FullProperty
+     __typename
+   }
+   __typename
+ }
+
+ fragment FullPaymentMethod on PaymentMethod {
+   id
+   paymentProviderID
+   name
+   slug
+   description
+   image {
+     ...FullImage
+     __typename
+   }
+   __typename
+ }
+
+ fragment FullImage on Image {
+   id
+   createdAt
+   modifiedAt
+   filename
+   format
+   mimeType
+   extension
+   width
+   height
+   fileSize
+   title
+   description
+   tags
+   source
+   link
+   license
+   focalPoint {
+     x
+     y
+     __typename
+   }
+   ...ImageURLs
+   __typename
+ }
+
+ fragment ImageURLs on Image {
+   url
+   bigURL: transformURL(input: {width: 800, output: PNG, quality: 1})
+   largeURL: transformURL(input: {width: 500, output: PNG, quality: 1})
+   mediumURL: transformURL(input: {width: 300, output: PNG, quality: 1})
+   smallURL: transformURL(input: {width: 200, output: PNG, quality: 1})
+   squareBigURL: transformURL(
+     input: {width: 800, height: 800, output: PNG, quality: 1}
+   )
+   squareLargeURL: transformURL(
+     input: {width: 500, height: 500, output: PNG, quality: 1}
+   )
+   squareMediumURL: transformURL(
+     input: {width: 300, height: 300, output: PNG, quality: 1}
+   )
+   squareSmallURL: transformURL(
+     input: {width: 200, height: 200, output: PNG, quality: 1}
+   )
+   __typename
+ }
+
+ fragment FullSubscriptionDeactivation on SubscriptionDeactivation {
+   date
+   reason
+   __typename
+ }
+
+ fragment FullMemberPlan on MemberPlan {
+   id
+   slug
+   name
+   tags
+   description
+   image {
+     ...FullImage
+     __typename
+   }
+   amountPerMonthMin
+   availablePaymentMethods {
+     ...FullAvailablePaymentMethod
+     __typename
+   }
+   extendable
+   __typename
+ }
+
+ fragment FullAvailablePaymentMethod on AvailablePaymentMethod {
+   paymentMethods {
+     ...FullPaymentMethod
+     __typename
+   }
+   paymentPeriodicities
+   forceAutoRenewal
+   __typename
+ }
+
+ fragment FullProperty on PublicProperties {
+   key
+   value
+   __typename
+ }
+ Expected variables: {}
+
+       </div>
+     </div>
+     <div
        class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
      >
        <img
          alt="DSC07717"
          class="css-cibo30-ImageWrapper e1shv2yg0""
`;

exports[`SubscriptionList Container should render Unpaid 1`] = `
<DocumentFragment>
  <article
    class="css-1lcio32-SubscriptionListWrapper e12e7g630"
  >
    <div
      class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
    >
      <img
        alt="DSC07717"
        class="css-cibo30-ImageWrapper e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <div
        class="css-6l2m0q-SubscriptionListItemContent eere75z3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
        >
          Foobar Memberplan
        </h6>
        <ul
          class="css-14qrd03-SubscriptionListItemMeta eere75z2"
        >
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
              />
            </svg>
            <span>
              Abgeschlossen am 
              <time
                datetime="2023-01-01"
              >
                01.01.2023 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
              />
            </svg>
             Abo ist unbezahlt
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8A5.87 5.87 0 0 1 6 12c0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"
              />
            </svg>
             Wird automatisch vierteljährlich erneuert
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
            </svg>
             Kostet CHF 2'500.- pro Monat
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
             
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
              href="https://example.com"
            >
              Details & Zahlungen
            </a>
          </li>
        </ul>
        <div
          class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-10v00ka-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Abo Künden
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1jff9ki-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Jetzt Bezahlen
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`SubscriptionList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-1lcio32-SubscriptionListWrapper e12e7g630"
  >
    <div
      class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
    >
      <img
        alt="DSC07717"
        class="css-cibo30-ImageWrapper e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <div
        class="css-6l2m0q-SubscriptionListItemContent eere75z3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
        >
          Foobar Memberplan
        </h6>
        <ul
          class="css-14qrd03-SubscriptionListItemMeta eere75z2"
        >
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
              />
            </svg>
            <span>
              Abgeschlossen am 
              <time
                datetime="2023-01-01"
              >
                01.01.2023 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
              />
            </svg>
            <span>
              Bezahlt bis 
              <time
                datetime="2032-01-01"
              >
                01.01.2032 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8A5.87 5.87 0 0 1 6 12c0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"
              />
            </svg>
             Wird automatisch vierteljährlich erneuert
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
            </svg>
             Kostet CHF 2'500.- pro Monat
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
             
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
              href="https://example.com"
            >
              Details & Zahlungen
            </a>
          </li>
        </ul>
        <div
          class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-10v00ka-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Abo Künden
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1jff9ki-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Jetzt Bezahlen
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`SubscriptionList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-1lcio32-SubscriptionListWrapper e12e7g630"
  >
    <div
      class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
    >
      <img
        alt="DSC07717"
        class="css-cibo30-ImageWrapper e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <div
        class="css-6l2m0q-SubscriptionListItemContent eere75z3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1dppcjr-MuiTypography-root"
        >
          Foobar Memberplan
        </h6>
        <ul
          class="css-14qrd03-SubscriptionListItemMeta eere75z2"
        >
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
              />
            </svg>
            <span>
              Abgeschlossen am 
              <time
                datetime="2023-01-01"
              >
                01.01.2023 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
              />
            </svg>
            <span>
              Bezahlt bis 
              <time
                datetime="2032-01-01"
              >
                01.01.2032 00:00
              </time>
            </span>
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8A5.87 5.87 0 0 1 6 12c0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"
              />
            </svg>
             Wird automatisch vierteljährlich erneuert
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
            </svg>
             Kostet CHF 2'500.- pro Monat
          </li>
          <li
            class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
             
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
              href="https://example.com"
            >
              Details & Zahlungen
            </a>
          </li>
        </ul>
        <div
          class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-10v00ka-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Abo Künden
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1jff9ki-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Jetzt Bezahlen
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`SubscriptionList Container should render WithFilter 1`] = `
<DocumentFragment>
  <article
    class="css-1lcio32-SubscriptionListWrapper e12e7g630"
  >
    <div
      class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
    >
      <div
        class="css-6l2m0q-SubscriptionListItemContent eere75z3"
      >
        <strong>
          Kein aktives Abo
        </strong>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
